--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -27,11 +27,20 @@
                     </button>
                 </form>
                 
-                <div class="text-center">
+                <div class="text-center mb-2">
                     <a href="{{ url_for('login') }}" class="text-decoration-none">
                         <i class="fas fa-arrow-left me-1"></i>Back to Login
                     </a>
                 </div>
+                
+                {% if session.get('last_reset_email') %}
+                <div class="text-center">
+                    <p class="mt-3">
+                        Didn't receive the email? 
+                        <a href="{{ url_for('resend_reset_email') }}" class="btn btn-warning btn-sm">Resend Reset Email</a>
+                    </p>
+                </div>
+                {% endif %}
             </div>
         </div>
     </div>
