Update:Updated the system main functionalities and the Ui

--- a/templates/system_logs.html
+++ b/templates/system_logs.html
@@ -1,7 +1,7 @@
 
 {% extends "base.html" %}
 
-{% block title %}System Logs - Oraco Kenya SecureFiles{% endblock %}
+{% block title %}System Logs - Oraco Kenya Secure File Encryption{% endblock %}
 
 {% block content %}
 <div class="row">
