--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -1,7 +1,7 @@
 
 {% extends "base.html" %}
 
-{% block title %}Add User - Oraco Kenya SecureFiles{% endblock %}
+{% block title %}Add User - Oraco Kenya Secure File Encryption{% endblock %}
 
 {% block content %}
 <div class="row justify-content-center">
