--- a/templates/login.html
+++ b/templates/login.html
@@ -1,17 +1,19 @@
 
 {% extends "base.html" %}
 
-{% block title %}Login - Oraco Kenya SecureFiles{% endblock %}
+{% block title %}Login - Oraco Kenya Secure File Encryption{% endblock %}
 
 {% block content %}
 <div class="row justify-content-center">
     <div class="col-md-6 col-lg-4">
         <div class="card shadow">
             <div class="card-body p-4">
-                <div class="text-center mb-4">
-                    <i class="fas fa-shield-alt fa-3x text-primary mb-3"></i>
-                    <h4 class="card-title">Oraco Kenya</h4>
-                    <p class="text-muted">Secure File Encryption System</p>
+                <div class="login-logo">
+                    <div class="login-logo-icon">
+                        <i class="fas fa-lock"></i>
+                    </div>
+                    <div class="login-logo-title">Oraco Kenya</div>
+                    <div class="login-logo-subtitle">Secure File Encryption System</div>
                 </div>
                 
                 <form method="POST">
